WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
271394
AX: Input time elements with no value are read incorrectly by VoiceOver.
https://bugs.webkit.org/show_bug.cgi?id=271394
Summary
AX: Input time elements with no value are read incorrectly by VoiceOver.
Andres Gonzalez
Reported
2024-03-21 10:17:16 PDT
VoiceOver reads garbage value for <input type="time" />.
Attachments
Patch
(23.54 KB, patch)
2024-03-21 10:34 PDT
,
Andres Gonzalez
no flags
Details
Formatted Diff
Diff
Patch
(24.17 KB, patch)
2024-03-22 08:21 PDT
,
Andres Gonzalez
no flags
Details
Formatted Diff
Diff
Patch
(25.15 KB, patch)
2024-03-22 11:46 PDT
,
Andres Gonzalez
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-03-21 10:17:23 PDT
<
rdar://problem/125176285
>
Andres Gonzalez
Comment 2
2024-03-21 10:34:34 PDT
Created
attachment 470461
[details]
Patch
Andres Gonzalez
Comment 3
2024-03-22 08:21:57 PDT
Created
attachment 470509
[details]
Patch
Andres Gonzalez
Comment 4
2024-03-22 11:46:00 PDT
Created
attachment 470514
[details]
Patch
EWS
Comment 5
2024-03-25 08:57:32 PDT
Committed
276626@main
(f2989cc4e30e): <
https://commits.webkit.org/276626@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 470514
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug